Don't access memory after freeing it when destroying a tick callback

https://bugzilla.gnome.org/show_bug.cgi?id=704278